# rust-dnn

./: .gitignore
rust-dnn-core/: Cargo.toml
rust-dnn-core/src/: backend.rs  cpu_backend.rs  cpu_storage.rs  cuda_backend.rs  device.rs  dim.rs  dtype.rs  error.rs  float.rs  gradients.rs  layout.rs  lib.rs  num.rs  op.rs  storage.rs  tensor.rs  wgpu_backend.rs  xorshift128.rs
rust-dnn-core/tests/: backprop_tests.rs  dtype_tests.rs  tensor_tests.rs  test_utils.rs
rust-dnn-cuda-kernel/: Cargo.toml  Makefile  build.rs
rust-dnn-cuda-kernel/src/: basic.rs  clayout.rs  cublas.rs  cuda.rs  cudnn.rs  gpu_buffer.rs  gpu_memory_allocator.rs  gpu_memory_block.rs  lib.rs  math.rs  nn.rs  raw_gpu_buffer.rs
rust-dnn-datasets/: Cargo.toml
rust-dnn-datasets/src/: cifar10.rs  lib.rs  mnist.rs
rust-dnn-datasets/tests/: cifar10_tests.rs  mnist_tests.rs
rust-dnn-examples/: Cargo.toml
rust-dnn-examples/examples/dcgan/: main.rs
rust-dnn-examples/examples/diffusion/: main.rs
rust-dnn-examples/examples/gpt2_tinyshakespear/: main.rs
rust-dnn-examples/examples/llama3_tinyshakespear/: attention.rs  main.rs
rust-dnn-examples/examples/mnist/: main.rs
rust-dnn-examples/examples/mnist_cnn/: main.rs
rust-dnn-examples/examples/pix2pix/: main.rs
rust-dnn-examples/examples/vae/: main.rs
rust-dnn-examples/src/: argv.rs  lib.rs
rust-dnn-nn/: Cargo.toml
rust-dnn-nn/src/: batch_iter.rs  embedding.rs  function.rs  layer.rs  lib.rs  loss.rs  multi_head_attention.rs  optimizer.rs  sequential.rs
rust-dnn-safetensors/: Cargo.toml
rust-dnn-wgpu/: Cargo.toml
(+30 files in other folders)
