[package]
name = "rust-dnn-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "*"
image = "*"

[dependencies.rust-dnn-core]
path = "../rust-dnn-core"

[dependencies.rust-dnn-nn]
path = "../rust-dnn-nn"

[dependencies.rust-dnn-datasets]
path = "../rust-dnn-datasets"

[dependencies.rust-dnn-safetensors]
path = "../rust-dnn-safetensors"

[features]
default = []
cuda = ["rust-dnn-core/cuda"] 
